--- a/project3/Project-3.html
+++ b/project3/Project-3.html
@@ -3079,7 +3079,7 @@ descriptions &lt;- tm_map(descriptions, removeWords, stopwords(&quot;english&quo
 descriptions &lt;- tm_map(descriptions, removePunctuation)
 
 #Remove whitespace
-descriptions &lt;- tm_map(descriptions, stripWhitespace)</code></pre>
+#descriptions &lt;- tm_map(descriptions, stripWhitespace)</code></pre>
 <div style="margin-bottom:50px;">
 
 </div>
