Added the spam email data

--- a/Project 4/SungLee_Project4_Data607.html
+++ b/Project 4/SungLee_Project4_Data607.html
@@ -2858,15 +2858,56 @@ div.tocify {
 </div>
 
 
-<p>[Assignment on RPubs] <br> <a href="https://github.com/logicalschema/DATA607/blob/master/Project%204/SungLee_Project4_Data607.Rmd" title="Sung&#39;s Project 4 Assignment Github">Rmd on Github</a></p>
+<p><a href="https://rpubs.com/logicalschema/data607_project4" title="Sung&#39;s Project 4 on RPubs">Assignment on RPubs</a> <br> <a href="https://github.com/logicalschema/DATA607/blob/master/Project%204/SungLee_Project4_Data607.Rmd" title="Sung&#39;s Project 4 Assignment Github">Rmd on Github</a></p>
 <div id="introduction" class="section level1">
 <h1>Introduction</h1>
+<p>The purpose of this project is to get our feet wet in document classification. One application of document classification is identifying “spam” and “ham”. Spam is “any kind of unwanted, unsolicited digital communication, often an email, that gets sent out in bulk.”<a href="#fn1" class="footnote-ref" id="fnref1"><sup>1</sup></a> Ham would be the opposite of spam and represent necessary and/or wanted digital communications. Spam can potentially contain malicious code and consume space on email servers.</p>
+<p>This project will employ a spam/ham dataset to develop a model. This model will then be run to make predictions of a new dataset to determine spam/ham. Let’s go.</p>
+<div style="margin-bottom:50px;">
+
+</div>
 </div>
 <div id="import" class="section level1">
 <h1>Import</h1>
+<p>These will be the libraries used for this project. I wanted to use Quanteda for this project. It is package for analyzing text documents. More information can be found here: <a href="https://quanteda.io/" class="uri">https://quanteda.io/</a>.</p>
+<pre class="r"><code>library(RColorBrewer)
+library(SnowballC)
+library(summarytools)
+library(wordcloud)
+library(ggplot2)
+library(tidytext)
+library(tidyverse)
+library(quanteda)</code></pre>
+<div style="margin-bottom:50px;">
+
+</div>
+</div>
+<div id="text-mining" class="section level1 tabset">
+<h1>Text Mining</h1>
+<div style="margin-bottom:50px;">
+
+</div>
+<div id="method-1" class="section level2">
+<h2>Method 1</h2>
+<div style="margin-bottom:50px;">
+
+</div>
+</div>
+<div id="method-2" class="section level2">
+<h2>Method 2</h2>
+<div style="margin-bottom:50px;">
+
+</div>
+</div>
 </div>
 <div id="conclusion" class="section level1">
 <h1>Conclusion</h1>
+</div>
+<div class="footnotes">
+<hr />
+<ol>
+<li id="fn1"><p><a href="https://www.malwarebytes.com/spam/" class="uri">https://www.malwarebytes.com/spam/</a><a href="#fnref1" class="footnote-back">↩</a></p></li>
+</ol>
 </div>
 
 
